--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "0.9.5",
     "reducer": "^0.19.2",
     "redux": "^4.2.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
